# axend-os

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AXEND_OS_DEMO_PITCH.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/rules/: 00-axend-core.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
axend/decisions/: DECISIONS.md
axend/handoffs/: HANDOFF_CHATGPT.md  HANDOFF_CURRENT.md  HANDOFF_CURSOR.md  RESTART_PACK.md
axend/prompts/: system-qwen-coder.txt  system-qwen3-general.txt  user-template-next-action.md  user-template-restart-pack.md
axend/proofs/: latest-proof.json
axend/state/: current-lot.json  project-core.json  project-status.json  proof-log.json
docs/: AXEND_LOW_TOKEN_METHOD_1_PAGE.md  SOFTWARE_CONNECTION_MAP.md  TOOL_ROLE_MATRIX.md
scripts/: app-doctor.mjs  check-format.mjs  check-metadata-consistency.mjs  check-reference-links.mjs  check-source-syntax.mjs  complete-lot-validation.mjs  create-backup.mjs  generate-handoff.mjs  generate-restart-pack.mjs  init-axend-repo.mjs  lint-no-control-chars.mjs  ollama-router.mjs  route-next-action.mjs  smoke-tests.mjs  validate-proof.mjs  validate-state.mjs
scripts/tests/: lot-validation.test.mjs  metadata-consistency.test.mjs  repo-integrity.test.mjs  state-files.test.mjs
src/: App.tsx  components.tsx  seed.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: storage.ts
