[package]
name = "axend-os"
version = "0.1.0"
description = "AXEND OS desktop app"
authors = ["David"]
edition = "2021"

[lib]
name = "axend_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
